--- a/report/report.bib
+++ b/report/report.bib
@@ -2,18 +2,44 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Christopher Fu at 2016-05-11 00:09:13 -0700 
+%% Created for Christopher Fu at 2016-05-11 04:25:13 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{Liu:2005aa,
+	Author = {Hugo Liu and Henry Lieberman},
+	Date-Added = {2016-05-11 11:23:42 +0000},
+	Date-Modified = {2016-05-11 11:25:11 +0000},
+	Journal = {Proceedings of IUI'05},
+	Pages = {305-307},
+	Title = {Metafor: Visualizing Stories as Code},
+	Year = {2005}}
+
+@article{Manning:2014aa,
+	Author = {Christopher D. Manning and Mihai Surdeanu and John Bauer and Jenny Finkel and Steven J. Bethard and David McClosky},
+	Date-Added = {2016-05-11 10:32:59 +0000},
+	Date-Modified = {2016-05-11 10:34:30 +0000},
+	Journal = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics: System Demonstrations},
+	Pages = {55-60},
+	Title = {The Stanford CoreNLP Natural Language Processing Toolkit},
+	Year = {2014}}
+
+@book{Bergin:2013aa,
+	Author = {Joseph Bergin and Mark Stehlik and Jim Roberts and Richard Pattis},
+	Date-Added = {2016-05-11 09:44:44 +0000},
+	Date-Modified = {2016-05-11 09:45:39 +0000},
+	Publisher = {Dreamsongs Press},
+	Title = {Karel J Robot: A Gentle Introduction to the Art of Object-Oriented Programming in Java},
+	Year = {2013}}
+
 @article{Green:1996aa,
 	Author = {T. R. G. Green and M. Petre},
 	Date-Added = {2016-05-11 07:08:02 +0000},
-	Date-Modified = {2016-05-11 07:09:09 +0000},
-	Journal = {Journal of Visual Languages & Computing},
+	Date-Modified = {2016-05-11 08:58:49 +0000},
+	Journal = {Journal of Visual Languages and Computing},
 	Month = {June},
 	Number = {2},
 	Pages = {131-174},
