--- a/report/report.bib
+++ b/report/report.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Christopher Fu at 2016-05-11 04:25:13 -0700 
+%% Created for Christopher Fu at 2016-05-11 18:01:31 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -61,10 +61,10 @@
 @article{Pane:2001aa,
 	Author = {John F. Pane and Chotirat Ann Ratanamahatana and Brad A. Myers},
 	Date-Added = {2016-05-11 06:19:15 +0000},
-	Date-Modified = {2016-05-11 06:23:04 +0000},
+	Date-Modified = {2016-05-12 01:01:31 +0000},
 	Journal = {International Journal of Human-Computer Studies},
 	Number = {2},
 	Pages = {237-264},
-	Title = {Studying the language and structure in non-programmers' solutions to programming problems},
+	Title = {Studying the Language and Structure in Non-Programmers' Solutions to Programming Problems},
 	Volume = {54},
 	Year = {2001}}
